--- a/suse2013/common/l10n/ar.xml
+++ b/suse2013/common/l10n/ar.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<l:l10n xmlns:l="http://docbook.sourceforge.net/xmlns/l10n/1.0" 
-   language="ar" 
+<l:l10n xmlns:l="http://docbook.sourceforge.net/xmlns/l10n/1.0"
+   language="ar"
    english-language-name="Arabic">
 
    <l:gentext key="SeeAlso"         text="طالع أيضًا"/>
@@ -12,9 +12,9 @@
    <l:gentext key="FlyerQuickstart" text="NOVELL&#x00AE; بطاقة التشغيل السريع"/>
    <!-- FlyerCopyright: Moved to copyright_quick.xml -->
    <l:gentext key="FlyerMadeby"  text="تم الإنشاء بواسطة  SUSE&#x00AE; باستخدام لغة XSL-FO"/>
-   
+
    <l:gentext key="admonseparator"  text=": "/>
- 
+
    <l:gentext key="Question" text="السؤال:"/>
    <l:gentext key="question" text="السؤال:"/>
 
@@ -44,42 +44,68 @@
    </l:context>
 
    <l:context name="xref">
-      <l:template name="sect1" text="القسم &#8220;%t&#8221;"/>
-      <l:template name="sect2" text="القسم &#8220;%t&#8221;"/>
-      <l:template name="sect3" text="القسم &#8220;%t&#8221;"/>
-      <l:template name="sect4" text="القسم &#8220;%t&#8221;"/>
-      <l:template name="sect5" text="القسم &#8220;%t&#8221;"/>
+      <l:template name="sect1" text="القسم “%t”"/>
+      <l:template name="sect2" text="القسم “%t”"/>
+      <l:template name="sect3" text="القسم “%t”"/>
+      <l:template name="sect4" text="القسم “%t”"/>
+      <l:template name="sect5" text="القسم “%t”"/>
       <l:template name="page.citation" text=" (الصفحة&#160;%p)"/>
+
+      <!-- Added the following items, some of them might be wrong...
+           It seems "ال" == "the", but I still was not sure whether to add this
+           everywhere. I just took the translations from the DocBook
+           stylesheets. Expect issues to crop up. -->
+
+      <l:template name="intra-article" text="مقال “%t”"/>
+      <l:template name="intra-book" text="كتاب “%t”"/>
+      <l:template name="intra-chapter" text="فصل&#160;%n “%t”"/>
+      <!--<l:template name="intra-part" text="%B %t"/>-->
+      <l:template name="intra-sect1" text="القسم&#160;%n “%t”"/>
+      <l:template name="intra-sect2" text="القسم&#160;%n “%t”"/>
+      <l:template name="intra-sect3" text="القسم&#160;%n “%t”"/>
+      <l:template name="intra-sect4" text="القسم&#160;%n “%t”"/>
+
+      <l:template name="intra-example" text="مثال&#160;%n “%t”"/>
+      <l:template name="intra-figure" text="شكل&#160;%n “%t”"/>
+      <l:template name="intra-preface" text=" “%t”"/>
+      <l:template name="intra-procedure" text="إجراء&#160;%n “%t”"/>
+      <l:template name="intra-table" text="جدول&#160;%n “%t”"/>
+
+      <l:template name="intra-variablelist" text="“%t”"/>
+      <l:template name="intra-orderedlist" text="“%t”"/>
+      <l:template name="intra-itemizedlist" text="“%t”"/>
    </l:context>
 
    <l:context name="xref-number-and-title">
-      <l:template name="appendix" style="nonumber"  text="الملحق&#160;%t"/>
-      <l:template name="bridgehead" text="القسم&#160;&#8220;%t&#8221;"/>
-      <l:template name="chapter" style="nonumber"  text="الفصل&#160;%t"/>
-      <l:template name="equation" style="nonumber"  text="المعادلة&#160;&#8220;%t&#8221;"/>
-      <l:template name="example" style="nonumber"  text="المثال&#160;&#8220;%t&#8221;"/>
-      <l:template name="figure" style="nonumber"  text="الرسم التوضيحي&#160;&#8220;%t&#8221;"/>
-      <l:template name="part" style="nonumber"  text="الجزء&#160;&#8220;%t&#8221;"/>
-      <l:template name="procedure" style="nonumber"  text="الإجراء&#160;&#8220;%t&#8221;"/>
-      <l:template name="productionset" style="nonumber"  text="الإنتاج&#160;&#8220;%t&#8221;"/>
-      <l:template name="qandadiv" style="nonumber"  text="السؤال &amp; A&#160;&#8220;%t&#8221;"/>
-      <l:template name="refsect1" style="nonumber"  text="اسم القسم &#8220;%t&#8221;"/>
-      <l:template name="refsect2" style="nonumber"  text="اسم القسم &#8220;%t&#8221;"/>
-      <l:template name="refsect3" style="nonumber"  text="اسم القسم &#8220;%t&#8221;"/>
-      <l:template name="refsection" style="nonumber"  text="اسم القسم &#8220;%t&#8221;"/>
-      <l:template name="sect1" style="nonumber" text="القسم&#160;&#8220;%t&#8221;"/>
-      <l:template name="sect2" style="nonumber"  text="القسم&#160;&#8220;%t&#8221;"/>
-      <l:template name="sect3" style="nonumber"  text="القسم&#160;&#8220;%t&#8221;"/>
-      <l:template name="sect4" style="nonumber"  text="Section&#160;&#8220;%t&#8221;"/>
-      <l:template name="sect5" style="nonumber"  text="القسم&#160;&#8220;%t&#8221;"/>
-      <l:template name="section" style="nonumber"  text="القسم&#160;&#8220;%t&#8221;"/>
-      <l:template name="simplesect" style="nonumber"  text="اسم القسم &#8220;%t&#8221;"/>
-      <l:template name="table" style="nonumber"  text="الجدول&#160;&#8220;%t&#8221;"/>
+      <l:template name="appendix" style="nonumber"  text="الملحق “%t”"/>
+      <l:template name="bridgehead" text="القسم “%t”"/>
+      <l:template name="chapter" style="nonumber"  text="الفصل “%t”"/>
+      <l:template name="equation" style="nonumber"  text="المعادلة “%t”"/>
+      <l:template name="example" style="nonumber"  text="المثال “%t”"/>
+      <l:template name="figure" style="nonumber"  text="الرسم التوضيحي “%t”"/>
+      <l:template name="part" style="nonumber"  text="الجزء “%t”"/>
+      <l:template name="procedure" style="nonumber"  text="الإجراء “%t”"/>
+      <l:template name="productionset" style="nonumber"  text="الإنتاج “%t”"/>
+      <!-- FIXME: "Q & A" is quite possibly wrong - this is the tranlsation for
+           qandadiv (i.e. not for qandaset) from the original stylesheets. -->
+      <l:template name="qandadiv" style="nonumber"  text="س و ج “%t”"/>
+      <l:template name="refsect1" style="nonumber"  text="اسم القسم “%t”"/>
+      <l:template name="refsect2" style="nonumber"  text="اسم القسم “%t”"/>
+      <l:template name="refsect3" style="nonumber"  text="اسم القسم “%t”"/>
+      <l:template name="refsection" style="nonumber"  text="اسم القسم “%t”"/>
+      <l:template name="sect1" style="nonumber" text="القسم “%t”"/>
+      <l:template name="sect2" style="nonumber"  text="القسم “%t”"/>
+      <l:template name="sect3" style="nonumber"  text="القسم “%t”"/>
+      <l:template name="sect4" style="nonumber"  text="القسم “%t”"/>
+      <l:template name="sect5" style="nonumber"  text="القسم “%t”"/>
+      <l:template name="section" style="nonumber"  text="القسم “%t”"/>
+      <l:template name="simplesect" style="nonumber"  text="اسم القسم “%t”"/>
+      <l:template name="table" style="nonumber"  text="الجدول “%t”"/>
    </l:context>
 
 <!-- fs 2013-05-29:
 ###################### No translation Start ###########################
---> 
+-->
    <l:context name="xep-bookmark-title">
       <l:template name="article" text="%t"/>
       <l:template name="appendix" text="%n. %t"/>
@@ -107,7 +133,7 @@
       <l:template name="simplesect" text="%t"/>
       <l:template name="toc" text="%t"/>
    </l:context>
-   
+
 <!-- fs 2013-05-29:
 ###################### No translation End ###########################
 -->
@@ -115,12 +141,12 @@
    <l:context name="title">
       <l:template name="part" text="الجزء&#160;%n&#160;%t"/>
    </l:context>
-   
-  <!-- 
+
+  <!--
     HACK for keycap context
     We need to keep this for some time
     See Ticket#84 and https://sf.net/tracker/index.php?func=detail&aid=3540451&group_id=21935&atid=373750
-   --> 
+   -->
    <l:context name="msgset">
       <l:template name="alt" text="Alt"/>
       <l:template name="backspace" text="&lt;&#x2014;"/><!-- mdash -->
@@ -154,6 +180,6 @@
    <l:context name="datetime">
      <l:template name="titlepage.format" text="d b Y"/>
    </l:context>
-  
+
 </l:l10n>
 
