--- a/suse2013/common/l10n/en.xml
+++ b/suse2013/common/l10n/en.xml
@@ -70,56 +70,56 @@
    </l:context>
 
    <l:context name="xref">
-      <l:template name="sect1" text="Section &#8220;%t&#8221;"/>
-      <l:template name="sect2" text="Section &#8220;%t&#8221;"/>
-      <l:template name="sect3" text="Section &#8220;%t&#8221;"/>
-      <l:template name="sect4" text="Section &#8220;%t&#8221;"/>
-      <l:template name="sect5" text="Section &#8220;%t&#8221;"/>
+      <l:template name="sect1" text="Section “%t”"/>
+      <l:template name="sect2" text="Section “%t”"/>
+      <l:template name="sect3" text="Section “%t”"/>
+      <l:template name="sect4" text="Section “%t”"/>
+      <l:template name="sect5" text="Section “%t”"/>
       <l:template name="page.citation" text=" (page&#160;%p)"/>
-     
+
       <l:template name="intra-article" text="Article “%t”"/>
       <l:template name="intra-book" text="Book “%t”"/>
-      <l:template name="intra-chapter" text="Chapter %n “%t”"/>
+      <l:template name="intra-chapter" text="Chapter&#160;%n “%t”"/>
       <!--<l:template name="intra-part" text="%B %t"/>-->
-      <l:template name="intra-sect1" text="Section %n “%t”"/>
-      <l:template name="intra-sect2" text="Section %n “%t”"/>
-      <l:template name="intra-sect3" text="Section %n “%t”"/>
-      <l:template name="intra-sect4" text="Section %n “%t”"/>
+      <l:template name="intra-sect1" text="Section&#160;%n “%t”"/>
+      <l:template name="intra-sect2" text="Section&#160;%n “%t”"/>
+      <l:template name="intra-sect3" text="Section&#160;%n “%t”"/>
+      <l:template name="intra-sect4" text="Section&#160;%n “%t”"/>
       <l:template name="intra-preface" text="Preface “%t”"/>
-      <l:template name="intra-figure" text="Figure %n “%t”"/>
-      <l:template name="intra-table" text="Table %n “%t”"/>
-      <l:template name="intra-example" text="Example %n “%t”"/>
-      <l:template name="intra-procedure" text="Procedure %n “%t”"/>
-     
+      <l:template name="intra-figure" text="Figure&#160;%n “%t”"/>
+      <l:template name="intra-table" text="Table&#160;%n “%t”"/>
+      <l:template name="intra-example" text="Example&#160;%n “%t”"/>
+      <l:template name="intra-procedure" text="Procedure&#160;%n “%t”"/>
+
       <l:template name="intra-variablelist" text="“%t”"/>
       <l:template name="intra-orderedlist" text="“%t”"/>
       <l:template name="intra-itemizedlist" text="“%t”"/>
-      
+
    </l:context>
 
    <l:context name="xref-number-and-title">
-      <l:template name="appendix" style="nonumber"  text="Appendix&#160;%t"/>
-      <l:template name="bridgehead" text="Section&#160;&#8220;%t&#8221;"/>
-      <l:template name="chapter" style="nonumber"  text="Chapter&#160;%t"/>
-      <l:template name="equation" style="nonumber"  text="Equation&#160;&#8220;%t&#8221;"/>
-      <l:template name="example" style="nonumber"  text="Example&#160;&#8220;%t&#8221;"/>
-      <l:template name="figure" style="nonumber"  text="Figure&#160;&#8220;%t&#8221;"/>
-      <l:template name="part" style="nonumber"  text="Part&#160;&#8220;%t&#8221;"/>
-      <l:template name="procedure" style="nonumber"  text="Procedure&#160;&#8220;%t&#8221;"/>
-      <l:template name="productionset" style="nonumber"  text="Production&#160;&#8220;%t&#8221;"/>
-      <l:template name="qandadiv" style="nonumber"  text="Q &amp; A&#160;&#8220;%t&#8221;"/>
-      <l:template name="refsect1" style="nonumber"  text="the section called &#8220;%t&#8221;"/>
-      <l:template name="refsect2" style="nonumber"  text="the section called &#8220;%t&#8221;"/>
-      <l:template name="refsect3" style="nonumber"  text="the section called &#8220;%t&#8221;"/>
-      <l:template name="refsection" style="nonumber"  text="the section called &#8220;%t&#8221;"/>
-      <l:template name="sect1" style="nonumber" text="Section&#160;&#8220;%t&#8221;"/>
-      <l:template name="sect2" style="nonumber"  text="Section&#160;&#8220;%t&#8221;"/>
-      <l:template name="sect3" style="nonumber"  text="Section&#160;&#8220;%t&#8221;"/>
-      <l:template name="sect4" style="nonumber"  text="Section&#160;&#8220;%t&#8221;"/>
-      <l:template name="sect5" style="nonumber"  text="Section&#160;&#8220;%t&#8221;"/>
-      <l:template name="section" style="nonumber"  text="Section&#160;&#8220;%t&#8221;"/>
-      <l:template name="simplesect" style="nonumber"  text="the section called &#8220;%t&#8221;"/>
-      <l:template name="table" style="nonumber"  text="Table&#160;&#8220;%t&#8221;"/>
+      <l:template name="appendix" style="nonumber"  text="Appendix “%t”"/>
+      <l:template name="bridgehead" text="Section “%t”"/>
+      <l:template name="chapter" style="nonumber"  text="Chapter “%t”"/>
+      <l:template name="equation" style="nonumber"  text="Equation “%t”"/>
+      <l:template name="example" style="nonumber"  text="Example “%t”"/>
+      <l:template name="figure" style="nonumber"  text="Figure “%t”"/>
+      <l:template name="part" style="nonumber"  text="Part “%t”"/>
+      <l:template name="procedure" style="nonumber"  text="Procedure “%t”"/>
+      <l:template name="productionset" style="nonumber"  text="Production “%t”"/>
+      <l:template name="qandadiv" style="nonumber"  text="Q &amp; A “%t”"/>
+      <l:template name="refsect1" style="nonumber"  text="the section called “%t”"/>
+      <l:template name="refsect2" style="nonumber"  text="the section called “%t”"/>
+      <l:template name="refsect3" style="nonumber"  text="the section called “%t”"/>
+      <l:template name="refsection" style="nonumber"  text="the section called “%t”"/>
+      <l:template name="sect1" style="nonumber" text="Section “%t”"/>
+      <l:template name="sect2" style="nonumber"  text="Section “%t”"/>
+      <l:template name="sect3" style="nonumber"  text="Section “%t”"/>
+      <l:template name="sect4" style="nonumber"  text="Section “%t”"/>
+      <l:template name="sect5" style="nonumber"  text="Section “%t”"/>
+      <l:template name="section" style="nonumber"  text="Section “%t”"/>
+      <l:template name="simplesect" style="nonumber"  text="the section called “%t”"/>
+      <l:template name="table" style="nonumber"  text="Table “%t”"/>
    </l:context>
 
    <l:context name="xep-bookmark-title">
