--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,60 @@
 -------------------------------------------------------------------
+Fr Apr 22 09:00:00 UTC 2015 - toms@opensuse.org
+
+Stable release DAPS 2.0.5:
+
+Find issues in our GitHub tracker at
+https://github.com/openSUSE/suse-xsl/issues/NUMBER
+
+* Schema
+  - Add flat SUSEDoc schema for RNC and RNG
+  - Fix NovDoc/DB4 incompatibility: Phrase is only allowed in
+    productname, but not in productnumber
+
+* Spelling
+  - Fix trailing whitespace
+
+* Stylesheets (PDF)
+  - Added missing procedure, itemizedlist, and orderedlist for
+    intra.title.markup mode (suse-xsl #162, ec0cb3d6)
+  - Fix Ulink/Link template for DB 5
+  - Specifically check for @role='abbrev'
+  - Fix for vertical spaces on nested lists (#221)
+  - Question and answers
+    - Make an answer closer to a question
+	- Make consistent use of sans-stack for questions
+	- Use all paras in question consistently
+    - Italic for question label and first para (#200)
+  - Clean up web links
+  - Specifically check for @role='abbrev'
+  - Fix Ulink/Link template for DB 5
+
+* Stylesheets (XHTML)
+  - Add GitHub URL in titlepage of book and article (suse-xsl #35)
+  - Fix functionality of "dm:version"
+  - xref handling
+    - Improve xref and is.xref.in.samebook template
+    - Fix xref resolution when $rootid is empty
+  - Implement vcs.url to fix, remove add.github.url and
+    bibliosource (suse-xsl #35)
+  - add actual book title to HTML pages again (suse-xsl #208)
+  - Fix formatting for intraxref (provides final fix suse-xsl #162)
+
+* Stylesheets (EPUB)
+  - Build EPUBs by default without comments
+
+* Common Stylesheet Changes
+  - allow intra xref linking for tables, figures, admons (suse-xsl #155)
+  - Added missing procedure, itemizedlist, and orderedlist for
+    intra.title.markup mode (suse-xsl #162)
+
+* Packaging
+  - Update Requires/Recommends (also fixes suse-xsl #220)
+  - suse_beta => suse2013
+  - Improve package description in Spec file
+
+
+-------------------------------------------------------------------
 Tue Dec 02 13:41:00 UTC 2015 - toms@opensuse.org
 
 Stable release DAPS 2.0.4:
