--- a/ChangeLog
+++ b/ChangeLog
@@ -8,7 +8,7 @@ https://github.com/openSUSE/suse-xsl/issues/NUMBER
 
 * Stylesheets (XHTML)
   - Fixed style of <section><title> elements
-  - Turned of syntax highlighting in cases where it is unexpected
+  - Turned off syntax highlighting in cases where it is unexpected
 
 -------------------------------------------------------------------
 Mon Aug 01 16:00:00 UTC 2016 - sknorr@suse.de
